<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/textViewPlayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Player name"
        android:textColor="#FFF"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn1Player"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:text="@string/menu_1_joueur"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn2Players"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:text="@string/menu_2_joueurs"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:text="@string/menu_settings"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnLeave"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:text="@string/menu_quitter"
            android:textSize="30sp" />
    </LinearLayout>
</LinearLayout>
