<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".nomJoueurActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-100dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entrez_votre_nom"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/nomJoueur1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/votre_nom"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnJouer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:padding="30dp"
            android:text="@string/jouer"
            android:textSize="25sp" />
    </LinearLayout>

</LinearLayout>