<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".OnePlayerActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_1_joueur"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/nomJoueur1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <!--    Scores-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/scoreJ1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/joueur1"
                android:textColor="@color/player1"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" - "
                android:textSize="30sp" />

            <TextView
                android:id="@+id/scoreJ2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/joueur2"
                android:textColor="@color/player2"
                android:textSize="30sp" />
        </LinearLayout>


        <!--Game-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/btn0"
                style="@style/textViewBox"
                android:layout_marginStart="5dp" />

            <TextView
                android:id="@+id/btn1"
                style="@style/textViewBox"
                android:layout_marginStart="5dp" />

            <TextView
                android:id="@+id/btn2"
                style="@style/textViewBox"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/btn3"
                style="@style/textViewBox"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/btn4"
                style="@style/textViewBox"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/btn5"
                style="@style/textViewBox"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/btn6"
                style="@style/textViewBox"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/btn7"
                style="@style/textViewBox"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/btn8"
                style="@style/textViewBox"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>